--- a/app/main.kv
+++ b/app/main.kv
@@ -1,126 +1,3 @@
-<MainWindow>:
-    MDLabel:
-        size_hint:1,None
-        pos_hint: {"center_y": .9,"center_x":.5}
-        text:"Schreen 1.1.1"
-        text_size: root.width, None
-        color:0.32, 0.43, 0.47,1
-        size:self.texture_size
-        halign: 'center'
+MainRoot
 
-
-    BoxLayout:
-        orientation:"vertical"
-        size_hint:1,None
-        pos_hint: {"center_y": .3}
-        spacing:200
-        padding:100
-
-        BoxLayout:
-#            padding:50,50,50,50
-#            size_hint:1,.1
-            MDLabel:
-                text:"品質"
-                size_hint:None,None
-                size:75,10
-                color:0.32, 0.43, 0.47,1
-
-
-            MDIconButton:
-                icon: root.help_icon
-                on_release:root.quality_help_dialog()
-                size_hint:None,None
-                size:30,30
-                tooltip_text:"start"
-
-            MDLabel:
-
-            MDDropDownItem:
-                id: quality_dropdown
-                pos_hint: {"center_x": 0.5, "center_y": 0.6}
-    #            items: app.items
-                items: ["普通","高品質","低品質"]
-                color:0.32, 0.43, 0.47,1
-                dropdown_bg: [1, 1, 1, 1]
-
-        BoxLayout:
-            MDLabel:
-                size_hint:None,None
-                size:100,10
-                text:"ポート"
-                color:0.32, 0.43, 0.47,1
-                tooltip_text:"start"
-
-            MDIconButton:
-                icon: root.help_icon
-                size_hint:None,None
-                size:30,30
-                on_release:root.port_help_dialog()
-                tooltip_text:"start"
-            MDLabel
-
-            MDTextField:
-                id:port_text
-                size_hint:None,None
-                size:130,50
-                pos_hint: {"center_x": 0.5, "center_y": 0.6}
-                text:"8050"
-                color:0.32, 0.43, 0.47,1
-                text_size: self.size       #←追加
-                halign: 'left'
-                color_mode: "custom"
-                line_color_focus:
-                    self.theme_cls.opposite_bg_normal
-
-
-    MDRaisedButton:
-        id:start_btn
-        size_hint:None,None
-        pos_hint: {"center_x": 0.4, "center_y": 0.1}
-#            padding_x:[20,0]
-#        disabled:not stop.disabled
-        text:"起動"
-        on_release:root.start()
-        md_bg_color:  0.0, 0.53, 0.48,1
-    MDRaisedButton:
-        id:stop_btn
-        size_hint:None,None
-        pos_hint: {"center_x": 0.6, "center_y": 0.1}
-#            padding_x:[20,0]
-        text:"終了"
-        disabled:True
-        on_release:root.stop()
-        md_bg_color:  0.0, 0.53, 0.48,1
-
-
-# デフォルトのダイアログが超絶ダセェのでカスタムダイアログ。
-<CustomDialog>:
-    background:"images/white.png"
-    size_hint:None,None
-    BoxLayout:
-        orientation:"vertical"
-        MDLabel:
-            size_hint:1,None
-            padding:30,10
-#            pos_hint: {"center_y": 0.9}
-            text:root.title
-            font_size:45
-            color:0.32, 0.43, 0.47,1
-            height: self.texture_size[1]
-
-        MDSeparator:
-
-        MDLabel:
-            padding:30,30
-            size_hint:1,.9
-            text:root.content
-            text_size:50,50
-            color:0.32, 0.43, 0.47,1
-
-
-        MDTextButton:
-            padding:30,30
-            size_hint:None,None
-            text:"閉じる"
-            pos_hint: {"center_x": 0.9}
-            on_release:root.dismiss()
+<MainRoot>
