--- a/app/uix/settings.kv
+++ b/app/uix/settings.kv
@@ -1,6 +1,6 @@
 #FIXME:KvViewer
-SettingsWindow
-<SettingsWindow@BoxLayout>:
+#SettingsWindow
+<SettingsWindow>:
     BoxLayout:
         Splitter:
             strip_size: 5  
@@ -28,19 +28,22 @@ SettingsWindow
                         text:"SSL"
                         text_color:0,0,0,.7
                         size_hint_x:1
+                        on_release:root.gotoSSL()
                     MDFlatButton:
                         font_size: dp(10)
                         size_hint_x:1
                         text:"言語-Lang"
-                        on_release:root.clicked()
+                        on_release:root.gotoLang()
                     MDFlatButton:
                         font_size: dp(10)
                         size_hint_x:1
                         text:"Darkmode"
+                        on_release:root.gotoDarkmode()
                     MDFlatButton:
                         font_size: dp(10)
                         size_hint_x:1
                         text:"Developer"
+                        on_release:root.gotoDeveloper()
                                                                                                                 
 
 
@@ -81,9 +84,9 @@ SettingsWindow
 
 
             # FIXME:kvViewer
-            #ScreenManager:
-            #    id:setting_screen_manager
-            SSLSetting:
+            ScreenManager:
+                id:setting_screen_manager
+            #SSLSetting:
 
 
 
@@ -92,17 +95,18 @@ SettingsWindow
                 #size_hint:.5,.05
                 size_hint:None,None
                 size:150*3,70
-                pos_hint:{"center_x":.7}
+                pos_hint:{"center_x":.75,"y":.5}
+
                 spacing: dp(10)
-                padding: dp(5)  
+                padding: dp(2)  
 
 
-                canvas:
-                    Color:
-                        rgba: 1,0,1,1
-                    Rectangle:
-                        size: self.size
-                        pos: self.pos
+                #canvas:
+                #    Color:
+                #        rgba: 1,0,1,1
+                #    Rectangle:
+                #        size: self.size
+                #        pos: self.pos
 
                 #Widget:
                 #    size_hint:None,.5
@@ -111,19 +115,15 @@ SettingsWindow
                 MDRaisedButton:
                     size_hint:None,None
                     size:150,70
-                    #pos_hint:{"center_x":.7,"center_y":.9}
                     text:"OK"
                 MDRaisedButton:
                     size_hint:None,None
                     size:150,70
-                    #pos_hint:{"center_x":.9,"center_y":.9}
                     text:"cancel"
                 MDRaisedButton:
                     size_hint:None,None
                     size:150,70
-                    #pos_hint:{"center_x":.9,"center_y":.9}
                     text:"apply"
-
                     canvas.before:
                         Color:
                             rgba: (0,0,0,1)
@@ -134,7 +134,7 @@ SettingsWindow
 
 
 # FIXME:KvViewer
-<SSLSetting@BoxLayout>:
+<SSLSetting>:
     ScrollView:
         BoxLayout:
             #size_hint:1,1
@@ -152,18 +152,17 @@ SettingsWindow
                     text_size: self.size
                     size_hint:None,None
                     pos_hint:{"center_y":.5}
-                    size:100,30
+                    size:250,40
                     text:"enable"
                     halign: 'left'
                     valign: 'middle'
                 Widget:
                     size_hint:None,None
-                    size:root.x * 2,30
+                    size:root.x * 2,40
                 MDSwitch:
                     id:enableSwitch
-                    active:False
                     size_hint:None,None
-                    size:80,30
+                    size:80,40
                     pos_hint:{"center_y":.5}
 
             BoxLayout:
@@ -175,35 +174,36 @@ SettingsWindow
                     size_hint:None,None
                     text_size: self.size
                     pos_hint:{"center_y":.5}
-                    size:250,30
+                    size:500,40
                     #halign: 'left'
                     valign: 'middle'
                     text:"OpenSSL PATH"
                 Widget:
                     size_hint:.3,None
                 MDTextField:
+                    id:opensslPathTextField
                     size_hint:None,None
                     pos_hint:{"center_y":.5}
-                    size:500,30
+                    size:500,40
                     disabled: not enableSwitch.active 
-                    text:"usr/bin/openssl"
                     color_mode: "custom"
-                    line_color_focus:
-                        self.theme_cls.opposite_bg_normal
+                    line_color_focus: .2,.2,.2,1
+                        #self.theme_cls.opposite_bg_normal
 
             BoxLayout:
                 size_hint:1,None
                 #pos_hint:{"center_x":.5}
                 MDLabel:
                     size_hint:None,None
-                    size:250,30
+                    size:400,40
                     pos_hint:{"center_y":.5}
                     text:"OpenSSL Version"
                 Widget:
                     size_hint:.5,None
                 MDLabel:
+                    id:opensslVersionLabel
                     pos_hint:{"center_y":.5}
-                    size:500,30
+                    size:500,40
                     text:"LibreSSL 2.8.3"
 
             #BoxLayout:
@@ -235,38 +235,45 @@ SettingsWindow
                 Widget:
                     size_hint:.3,None
                 MDTextField:                
+                    id:certPathTextField
                     size_hint:None,None
-                    size:500,30
+                    size:500,40
                     disabled: not enableSwitch.active 
-                    text:"path/path/cert.crt"
 
             BoxLayout:
                 size_hint:1,None
                 #pos_hint:{"center_x":.5}
                 MDLabel:
                     size_hint:None,None
-                    size:250,30
+                    size:250,40
                     pos_hint:{"center_y":.5}
                     text:"key path"
                 Widget:
                     size_hint:.3,None
                 MDTextField:                
+                    id:keyPathTextField
                     size_hint:None,None
-                    size:500,30  
+                    size:500,40  
                     disabled: not enableSwitch.active 
-                    text:"ユーザー/path/key.key"
+
+            MDRoundFlatButton:
+                size_hint:1,None
+                text_color:.2,.2,.2,1
+                text:"create SSL Key"
 
 
 <LangSetting>:
     BoxLayout:
         MDLabel:
-            text:"LANG SETTING"
+            text:"LANG SETTINGS\n Coming soon........."
 
-<DarkmodeSetting@BoxLayout>:
-    Label:
-        text:"DarkMode Setting"
+<DarkmodeSetting>: 
+    BoxLayout:
+        MDLabel:
+            text:"DarkMode Settings\n Coming soon...."
 
-<DeveloperSetting@BoxLayout>:
-    Label:
-        text:"Developer Setting"
+<DeveloperSetting>:
+    BoxLayout:
+        MDLabel:
+            text:"Developer Setting"
 
