add:create ssl key setting wizard ui:)

--- a/app/uix/main.kv
+++ b/app/uix/main.kv
@@ -78,7 +78,7 @@
         size_hint:None,None
         pos_hint:{"center_x":.5,"center_y":.25}
         text:"詳細設定"
-        on_release:app.root.change_disp2()
+        on_release:app.root.settingsDisplay()
 
 
     MDRaisedButton:
