--- a/app/uix/settings.kv
+++ b/app/uix/settings.kv
@@ -282,6 +282,7 @@
             size_hint:None,None
             size:150,70
             text:"cancel"
+            on_release:root.press_cancel()
         MDRaisedButton:
             size_hint:None,None
             size:150,70
