add: filemanager base doneeeee

--- a/app/uix/settings.kv
+++ b/app/uix/settings.kv
@@ -263,6 +263,7 @@
                 size_hint:1,None
                 text_color:.2,.2,.2,1
                 text:"create SSL Key"
+                on_release: app.root.createSSLDisplay()
 
     BoxLayout:
         id:messageBoxLayout
