update: Beautiful Filemanager okkkkkkk

--- a/app/uix/createSSLKey.kv
+++ b/app/uix/createSSLKey.kv
@@ -77,7 +77,7 @@
             spacing: dp(30)
             MDTextField:
                 id:countryTextField
-                hint_text:"国"
+                hint_text:"国名コード(2文字)"
                 required: True
                 helper_text_mode: "on_error"
             MDTextField:
